--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Knock Out Falling Keys! - A game written by ChatGPT-3.5, guided by Yingying</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <p>A game written by ChatGPT-3.5, guided by Yingying</p>
