hide overflown content, updated some styling.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <title>Knock Out Falling Keys! - A game written by ChatGPT-3.5, guided by Yingying</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   </head>
   <body>
-    <p>A game written by ChatGPT-3.5, guided by Yingying</p>
-    <h3 id="scoreDisplay">You knocked out 0 keys</h3>
+    <h4 id="scoreDisplay">Knock out some falling keys!</h4>
     <button id="reset-button">Reset</button>
     <div id="game-board"></div>
     <script src="app.js"></script>
