--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Knock Out Falling Keys! - A game written by ChatGPT-3.5, guided by Yingying</title>
+    <title>Knock Out Falling Keys! - A game developed by ChatGPT-3.5</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   </head>
   <body>
-    <h4 id="scoreDisplay">Knock out some falling keys!</h4>
-    <button id="reset-button">Reset</button>
+    <h4 id="scoreDisplay">Keys are falling down!<br>&nbsp;</h4>
+    
+    <div id="button-container">
+      <button id="reset-button">Reset</button>
+      <button id="about-button">About</button>
+    </div>
+
+    <!-- The modal -->
+    <div class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <!-- Close button -->
+        <span class="modal-close">&times;</span>
+
+        <!-- Modal title -->
+        <h2 class="modal-title">About the Game</h2>
+
+        <!-- Modal content -->
+        <p>Looking for a break from your busy life? Come and knock out some falling keys before they hit the ground! You can tap on a key to make it go away, or if you prefer using a desktop browser, type a key from your keyboard that matches one that's closest to the bottom to knock it out.</p>
+        <p>This is game developed from scratch by ChatGPT-3.5, with my guidance on design, coding, debugging and QA.</p>
+        <p>I hope you have fun. Share with anyone that you think that may enjoy it.</p>
+        <p>Yingying</p>
+        <p><a href="https://github.com/yingyingzux/Knock-Out-Falling-Keys" target="_blank">Github</a> • <a href = "#" target="_blank">A brief write-up on key learnings</a></p>
+      </div>
+    </div>
+
     <div id="game-board"></div>
     <script src="app.js"></script>
   </body>
