--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
         <!-- Modal content -->
         <p>Looking for a break from your busy life? Come and knock out some falling keys before they hit the ground! You can tap on a key to make it go away, or if you prefer using a desktop browser, type a key from your keyboard that matches one that's closest to the bottom to knock it out.</p>
-        <p>This is game developed from scratch by ChatGPT-3.5, with my guidance on design, coding, debugging and QA.</p>
+        <p>I co-developed this game from scratch with ChatGPT-3.5. who wrote 99% of the code. I design, coding, debugging and QA.</p>
         <p>I hope you have fun. Share with anyone that you think that may enjoy it.</p>
         <p>Yingying</p>
-        <p><a href="https://github.com/yingyingzux/Knock-Out-Falling-Keys" target="_blank">Github</a> • <a href = "#" target="_blank">A brief write-up on key learnings</a></p>
+        <p><a href="https://github.com/yingyingzux/Knock-Out-Falling-Keys" target="_blank">Github</a> | <a href = "#" target="_blank">Write-up of key learnings</a></p>
       </div>
     </div>
 
