--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         <h2 class="modal-title">About the Game</h2>
 
         <!-- Modal content -->
-        <p>Looking for a break from your busy life? Come and knock out some falling keys before they hit the ground! You can tap on a key to make it go away, or if you prefer using a desktop browser, type a key from your keyboard that matches one that's closest to the bottom to knock it out.</p>
-        <p>I co-developed this game from scratch with ChatGPT-3.5. who wrote 99% of the code. I design, coding, debugging and QA.</p>
-        <p>I hope you have fun. Share with anyone that you think that may enjoy it.</p>
-        <p>Yingying</p>
-        <p><a href="https://github.com/yingyingzux/Knock-Out-Falling-Keys" target="_blank">Github</a> | <a href = "#" target="_blank">Write-up of key learnings</a></p>
+        <p>Looking for a break from your busy life? Come and knock out some falling keys before they hit the ground! </p>
+        <p>The game has no time limit or game over, so it's perfect when you just want to unwind whiling listening to some music, news, or podcasts. All you need to do is tap on the falling keys to make them disappear; if you're playing on a desktop browser, type the key that matches the closest one to the bottom.</p>
+        <p>I collaborated with ChatGPT-3.5 to develop this game from scratch. While it wrote 99% of the code, I made sure that the parts I handled, which included the design, coding, debugging, and QA, were clearly communicated to it and integrated seamlessly into the game.</p>
+        <p>I hope you have fun playing this game and feel free to share it with anyone who you think may enjoy it.</p>
+        <p>Best regards,<br>Yingying</p>
+        <p><a href="https://github.com/yingyingzux/Knock-Out-Falling-Keys" target="_blank">Github</a> | <a href = "https://www.yingyingz.com/2023/04/a-delightful-experience-of-teaming-up-with-chatgpt-to-build-a-simple-game/" target="_blank">Write-up of key learnings</a></p>
       </div>
     </div>
 
