--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>I collaborated with ChatGPT-3.5 to develop this game from scratch. While it wrote 99% of the code, I made sure that the parts I handled, which included the design, coding, debugging, and QA, were clearly communicated to it and integrated seamlessly into the game.</p>
         <p>I hope you have fun playing this game and feel free to share it with anyone who you think may enjoy it.</p>
         <p>Best regards,<br>Yingying</p>
-        <p><a href="https://github.com/yingyingzux/Knock-Out-Falling-Keys" target="_blank">Github</a> | <a href = "https://www.yingyingz.com/2023/04/a-delightful-experience-of-teaming-up-with-chatgpt-to-build-a-simple-game/" target="_blank">Write-up of key learnings</a></p>
+        <p><a href="https://github.com/yingyingzux/Knock-Out-Falling-Keys" target="_blank">Github</a> | <a href = "https://yingyingzux.substack.com/p/a-delightful-experience-of-teaming-up-with-chatgpt-to-build-a-simple-game" target="_blank">Write-up of key learnings</a></p>
       </div>
     </div>
 
