--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!-- Modal content -->
         <p>Looking for a break from your busy life? Come and knock out some falling keys before they hit the ground! </p>
-        <p>The game has no time limit or game over, so it's perfect when you just want to unwind whiling listening to some music, news, or podcasts. All you need to do is tap on the falling keys to make them disappear; if you're playing on a desktop browser, type the key that matches the closest one to the bottom.</p>
+        <p>The game has no time limit or game over, so it's perfect when you just want to unwind while listening to some music, news, or podcasts. All you need to do is tap on the falling keys to make them disappear; if you're playing on a desktop browser, type the key that matches the closest one to the bottom.</p>
         <p>I collaborated with ChatGPT-3.5 to develop this game from scratch. While it wrote 99% of the code, I made sure that the parts I handled, which included the design, coding, debugging, and QA, were clearly communicated to it and integrated seamlessly into the game.</p>
         <p>I hope you have fun playing this game and feel free to share it with anyone who you think may enjoy it.</p>
         <p>Best regards,<br>Yingying</p>
